2008-08-20  Thomas Heller  <theller@python.net>

	* Changed the codegenerator to generate 'c_longlong' instead of
	'c_float' for CURRENCY. This is not really correct since the
	CURRENCY value is a fixed point integer scaled by a factor of
	10000, but at least the code will not crash.  Need a test case.

	* comtypes.server.register: Add an optional 'executable' parameter
	to Registrar.register(cls), can be used to override the executable
	image name that comtypes detects itself.  Patch by Michael
	Robellard.

2008-08-15  Thomas Heller  <theller@python.net>

	* comtypes.client._find_gen_dir() improved (based on a patch and
	helpful thoughts of Stefan Schukat): If comtypes.gen is not a
	directory in the filesystem, or not writeable by users, a new
	directory is created which will cache generated code.  This could
	be the case if comtypes is installed in a directory that has no
	write permissions by the urrent user, if the comtypes package
	resides in a zip-archive or a zipped egg, or if comtypes is used
	in a py2exe'd script.

	'%APPDATA%\<username>\Python\Python<XY>\comtypes_cache'

	is used for a normal Python script, for a py2exe frozen executables
	the directory will be

	'%TEMP%\comtypes_cache\<imagebasename>-<XY>'

	where <imagebasename> is the basename without extension of the
	frozen executable image, and <XY> is the major and minor Python
	version number, '25' for example.

	This makes sure that generated modules will *always* cached in the
	file system.
	
2008-08-13  Thomas Heller  <theller@python.net>

	* comtypes\automation.py: Allow this module to be imported on
	Windows CE.  Using safearrays on Windows CE will not work. I'm not
	sure if they are used much.

2008-08-08  Thomas Heller  <theller@python.net>

	* Implement InterlockedIncrement and InterlockedDecrement for
	win64.

2008-08-07  Thomas Heller  <theller@python.net>

	* Bump version number to 0.5.1

	* comtypes\tools\codegenerator.py: Change the order of the