@@ -1,3 +1,12 @@
+2008-08-27  Thomas Heller  <theller@python.net>
+
+	* A NULL handler is now added to the comtypes logger; this
+	prevents messages like 'No handlers could be found for logger
+	"comtypes"' when an error message is logged and the logging module
+	is not configured.
+
+	https://sourceforge.net/tracker/index.php?func=detail&aid=2066024&group_id=115265&atid=692940
+
 2008-08-20  Thomas Heller  <theller@python.net>
 
 	* Changed the codegenerator to generate 'c_longlong' instead of
